:lipstick: Fixed section alignment

--- a/website/src/style/_sections.scss
+++ b/website/src/style/_sections.scss
@@ -63,6 +63,7 @@
 
     .content-container {
       width: 75%;
+      margin-inline: auto;
     }
 
     .picture-container {
